--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
     background-color:#7fffff;
 }
 
-.white-writing
+.text-white
 {
     color:#ffffff;
 }
@@ -24,6 +24,23 @@
     background-image: url("../img/pattern.png");
     background-size:36%;
     background-repeat:repeat-x;
+    background-repeat:repeat-y;
+}
+
+.bg-monitor
+{
+    background-image: url("../img/monitor.jpg");
+    background-repeat:no-repeat;
+    background-size:20%;
+    block-size:10em;
+}
+
+.bg-graph
+{
+    background-image: url("../img/graph.jpg");
+    background-repeat:no-repeat;
+    background-size:20%;
+    block-size:10em;
 }
 
 .header-image
